Added Core submodule

--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,8 @@ minecraft {
     runDir = "eclipse"
 }
 
-repositories {
-    flatDir { dirs 'libs' }
-}
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':core')
 }
 
 processResources {
